estilo botoes e css pag 4

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
 </body>
 
 <div class="footer">
-		<a href="index.html" ><img alt="" src="imagens/seta-circulo-esquerda.png" id="botao"></a>
-		<a href="apresentacao.html" ><img alt="" src="imagens/seta-circulo-direita.png" id="botao"></a> 
+    <a href="index.html" ><img alt="" src="imagens/botao6.png" id="botao1"></a>
+    <a href="apresentacao.html" ><img alt="" src="imagens/botao-3.png" id="botao2"></a> 
 	</div>
 
 
