--- a/src/pagina4.html
+++ b/src/pagina4.html
@@ -28,17 +28,18 @@
         </article>
     </div>
 
-    <picture id="foto">
+    <div id="texto-direita">
     <img src="imagens/pag4/mulher-escritorio.png" alt="">
-        </picture>
+    </div>
 
 
 </body>
 
 
 <div class="footer">
-    <a href="pagina3.html" ><img alt="" src="imagens/seta-circulo-esquerda.png" id="botao"></a>
-    <a href="pagina4.html" ><img alt="" src="imagens/seta-circulo-direita.png" id="botao"></a> 
+    <a href="pagina3.html" ><img alt="" src="imagens/botao2.png" id="botao1"></a>
+    <img src="imagens/barra-footer.png" id="barra">
+    <a href="pagina4.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
 </div>
 
 
