--- a/src/apresentacao.html
+++ b/src/apresentacao.html
@@ -15,7 +15,7 @@
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
     <h1 id="titulo-apresentacao">Apresentação</h1>
-        <p id="p-apresentacao">O briefing é uma das primeiras etapas do processo comercial de uma organização. 
+        <p>O briefing é uma das primeiras etapas do processo comercial de uma organização. 
             É uma fase primordial de direcionamento para alinhar as expectativas do cliente e o entendimento de toda equipe 
             envolvida na produção de um determinado projeto.
         </p>
@@ -25,10 +25,10 @@
 
 
 
-<div class="footer">
-    <a href="index.html" ><img alt="" src="imagens/seta-circulo-esquerda.png" id="botao"></a>
-    <a href="pagina3.html" ><img alt="" src="imagens/seta-circulo-direita.png" id="botao"></a> 
-</div>
+    <div class="footer">
+        <a href="index.html" ><img alt="" src="imagens/botao6.png" id="botao1"></a>
+        <a href="pagina3.html" ><img alt="" src="imagens/botao-3.png" id="botao2"></a> 
+    </div>
 
 </body>
 
