--- a/src/pagina3.html
+++ b/src/pagina3.html
@@ -40,8 +40,8 @@
 
 
 <div class="footer">
-    <a href="apresentacao.html" ><img alt="" src="imagens/seta-circulo-esquerda.png" id="botao"></a>
-    <a href="pagina4.html" ><img alt="" src="imagens/seta-circulo-direita.png" id="botao"></a> 
+    <a href="apresentacao.html" ><img alt="" src="imagens/botao6.png" id="botao1"></a>
+    <a href="pagina4.html" ><img alt="" src="imagens/botao-3.png" id="botao2"></a> 
 </div>
 
 
