--- a/src/pagina3.html
+++ b/src/pagina3.html
@@ -5,7 +5,7 @@
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
 
-<link rel="stylesheet" type="text/css" href="style-pag3.css">
+<link rel="stylesheet" type="text/css" href="style/style-pag3.css">
 
 
 <script type="text/javascript" src="includes/conteudo.js"></script>
