--- a/src/pagina5.html
+++ b/src/pagina5.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
-<link rel="stylesheet" type="text/css" href="style/style-pag5.css">
+<link rel="stylesheet" type="text/css" href="style-pag4-5.css">
 
 
 <script type="text/javascript" src="includes/conteudo.js"></script>
@@ -24,7 +24,7 @@
             <p>A análise da relação custo-beneficio de uma pesquisa formal,
             tanto com recursos internos como com a contratação de terceiros,
             faz parte do dia a dia de qualquer profissional que se preocupa com
-            os resultados de sua gestão.Pensando nisso, considere o cenário apresentado a seguir.
+            os resultados de sua gestão.<br>Pensando nisso, considere o cenário apresentado a seguir.
                 </p>
         
                 </article>
@@ -39,9 +39,9 @@
 </body>
 
 <div class="footer">
-    <a href="pagina3.html" ><img alt="" src="imagens/botao2.png" id="botao1"></a>
+    <a href="pagina4.html" ><img alt="" src="imagens/botao2.png" id="botao1"></a>
     <img src="imagens/barra-footer.png" id="barra">
-    <a href="pagina5.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
+    <a href="pagina6.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
 </div>
 
 
