inicio responsividade primeira pagina

--- a/src/pagina4.html
+++ b/src/pagina4.html
@@ -12,7 +12,7 @@
 <script type="text/javascript" src="includes/scofunctions.js"></script> 
 
 
-<title>Página 4</title>
+<title>Caso de Ensino</title>
 </head>
 <body id="home" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
    
