--- a/src/pagina5.html
+++ b/src/pagina5.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="includes/conteudo.js"></script>
 <script type="text/javascript" src="includes/apiwrapper.js"></script>
 <script type="text/javascript" src="includes/scofunctions.js"></script> 
-<title>Gestão de Mídias Sociais</title>
+<title>Análise de Custo-beneficio</title>
 
 </head>
 
