--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
 </body>
 
 <div class="footer">
-    <a href="index.html" ><img alt="" src="imagens/botao6.png" id="botao1"></a>
-    <a href="apresentacao.html" ><img alt="" src="imagens/botao-3.png" id="botao2"></a> 
+    <a href="index.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
+    <a href="apresentacao.html" ><img alt="" src="imagens/botao-3.png" class="botoes"></a> 
 	</div>
 
 
