--- a/src/apresentacao.html
+++ b/src/apresentacao.html
@@ -14,20 +14,20 @@
 <title>Apresentação</title>
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
+    <div id="texto">
     <h1 id="titulo-apresentacao">Apresentação</h1>
-        <p>O briefing é uma das primeiras etapas do processo comercial de uma organização. 
+        <p>O briefing é uma das primeiras etapas do processo comercial de uma organização. <br> 
             É uma fase primordial de direcionamento para alinhar as expectativas do cliente e o entendimento de toda equipe 
             envolvida na produção de um determinado projeto.
         </p>
 
-    <img src="imagens/pag2/img-apresenta.png" id="img-apresenta">
-
-
+    </div>
+    <div id="imagem-tela"> </div>
 
 
     <div class="footer">
-        <a href="index.html" ><img alt="" src="imagens/botao6.png" id="botao1"></a>
-        <a href="pagina3.html" ><img alt="" src="imagens/botao-3.png" id="botao2"></a> 
+        <a href="index.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
+        <a href="pagina3.html" ><img alt="" src="imagens/botao-3.png" class="botoes"></a> 
     </div>
 
 </body>
