--- a/src/apresentacao.html
+++ b/src/apresentacao.html
@@ -5,7 +5,7 @@
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style-pag1-2.css">
 
 <script type="text/javascript" src="includes/conteudo.js"></script>
 <script type="text/javascript" src="includes/apiwrapper.js"></script>
