--- a/src/pagina5.html
+++ b/src/pagina5.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
-<link rel="stylesheet" type="text/css" href="style-pag4-5.css">
+<link rel="stylesheet" type="text/css" href="style/style-pag4-5.css">
 
 
 <script type="text/javascript" src="includes/conteudo.js"></script>
