--- a/src/pagina7a10.html
+++ b/src/pagina7a10.html
@@ -18,26 +18,26 @@
 
     <section id="home">
      <div id="texto-central">
-          <img src="imagens/pag7.8.9/forma-fundo.png" alt="" id="forma">   
+          <img src="imagens/pag7a10/forma-fundo.png" alt="" id="forma">   
           <h1 id="titulo">Quais são os principais erros na produção do briefing?</h1>
 
-          <img src="imagens/pag7.8.9/formaMais.png" id="imgMais"  alt="">
+          <img src="imagens/pag7a10/formaMais.png" id="imgMais"  alt="">
           <p>Enviar perguntas por e-mail e aguardar o retorno do cliente. </p>
 
 
-          <img src="imagens/pag7.8.9/formaMais.png" id="imgMais"  alt="">
+          <img src="imagens/pag7a10/formaMais.png" id="imgMais"  alt="">
           <p> Seguir um roteiro de perguntas pronto. </p>
 
 
 
-          <img src="imagens/pag7.8.9/formaMais.png"  id="imgMais" alt="">
+          <img src="imagens/pag7a10/formaMais.png"  id="imgMais" alt="">
           <p>  Fazer um briefing superficial </p>
  
 
           </div>
 
              <div id="imagem-direita">
-               <img src="imagens/pag7.8.9/celular.png" alt="">
+               <img src="imagens/pag7a10/celular.png" alt="">
                </div>
 
     </section>
