pagina 7a10 incompleta com problema

--- a/src/pagina6.html
+++ b/src/pagina6.html
@@ -45,7 +45,7 @@
 <div class="footer">
     <a href="pagina5.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
     <img src="imagens/barra-footer.png" id="barra">
-    <a href="pagina7.html" ><img alt="" src="imagens/botao5.png" id="botao2"></a> 
+    <a href="pagina7a10.html" ><img alt="" src="imagens/botao5.png" id="botao2"></a> 
 </div>
 
 
