--- a/src/pagina7a10.html
+++ b/src/pagina7a10.html
@@ -15,24 +15,48 @@
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
-
+  <img src="imagens/pag7a10/forma-fundo.png" alt="" id="forma"> 
     <section id="home">
      <div id="texto-central">
-          <img src="imagens/pag7a10/forma-fundo.png" alt="" id="forma">   
+           
           <h1 id="titulo">Quais são os principais erros na produção do briefing?</h1>
 
-          <img src="imagens/pag7a10/formaMais.png" id="imgMais"  alt="">
-          <p>Enviar perguntas por e-mail e aguardar o retorno do cliente. </p>
+
+          <p> <img src="imagens/pag7a10/formaMais.png" id="imgMais"  alt="">
+            Enviar perguntas por e-mail e aguardar o retorno do cliente. </p>
+
+            <div class="esconder">
+              <p>A melhor maneira de produzir um briefing é se reunir com o cliente
+                 presencialmente ou por videoconferência. Durante todo o contato
+                  com o cliente, é necessário demonstrar interesse,
+                   profissionalismo e promover a percepção de valor.
+                    É necessário estar realmente interessado em promover soluções que 
+                    contribuirão para sanar a dor do cliente</p>
+            </div>
 
 
-          <img src="imagens/pag7a10/formaMais.png" id="imgMais"  alt="">
-          <p> Seguir um roteiro de perguntas pronto. </p>
+          <p><img src="imagens/pag7a10/formaMais.png" id="imgMais"  alt="">
+             Seguir um roteiro de perguntas pronto. </p>
+          
+             <div class="esconder">
+              <p>Quando você utiliza um roteiro pronto,
+                o seu cliente pode se sentir forçado a responder 
+                todas as perguntas, mesmo que não façam sentido para o negócio
+                 ou ideia do projeto. O ideal é criar o briefing por meio de uma 
+                 escuta ativa. Desta forma, é possível entender melhor o modelo de 
+                 negócio, objetivos e problemas do cliente.</p>
+            </div>
 
 
-
-          <img src="imagens/pag7a10/formaMais.png"  id="imgMais" alt="">
-          <p>  Fazer um briefing superficial </p>
+          <p><img src="imagens/pag7a10/formaMais.png"  id="imgMais" alt="">
+              Fazer um briefing superficial </p>
  
+              <div class="esconder">
+                <p>Perguntas desordenadas criam briefings que não identificam a 
+                  real necessidade do cliente, estabelecem propostas de valor 
+                  desalinhadas com a realidade e, consequentemente, propostas que 
+                  não satisfarão a expectativa do cliente. </p>
+              </div>
 
           </div>
 
@@ -43,4 +67,10 @@
     </section>
 
 </body>
+
+<div class="footer">
+  <a href="pagina5.html" ><img alt="" src="imagens/botao6.png" id="botao1"></a>
+  <a href="pagina7.html" ><img alt="" src="imagens/botao-3.png" id="botao2"></a> 
+</div>
+
 </html>
