--- a/src/pagina12.html
+++ b/src/pagina12.html
@@ -4,41 +4,42 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
-<link rel="stylesheet" type="text/css" href="style/style-pag11.css">
+<link rel="stylesheet" type="text/css" href="style/style-pag12-13-14.css">
 
 
 <script type="text/javascript" src="includes/conteudo.js"></script>
 <script type="text/javascript" src="includes/apiwrapper.js"></script>
 <script type="text/javascript" src="includes/scofunctions.js"></script> 
-<title>Defina a sua estratégia</title>
+<title>Visite o cliente</title>
 
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
-<section id="home">
-   
+
+    <section id="home">
+
     <div id="texto-esquerda">
         <article>
-            <h1>Defina a sua estratégia </h1>
-        <p>Perguntas desordenadas criam briefings que não identificam
-             a real necessidade do cliente, estabelecem propostas de valor
-              desalinhadas com a realidade e, consequentemente, propostas que não
-               satisfarão a expectativa do cliente. </p>
+            <h1>Visite o cliente </h1>
+        <p>As visitas contribuem para identificar aspectos subjetivos do negócio e 
+            do dia-a-dia da organização. Viver, sentir e tirar as próprias conclusões
+             sobre o negócio do seu cliente contribui para uma melhor percepção das
+              necessidades, além de estreitar os laços entre você e o seu cliente.
+        </p>
             </article>
         </div>
        
         <div id="texto-direita">
-        <img src="imagens/pag11/pessoa-grafico.png" alt="">
-        </div>
+            <img src="imagens/pag12/visita.png" alt="">
+            </div>
     
 </section>
 
 </body>
 
 <div class="footer">
-<a href="pagina7a10.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
-<img src="imagens/barra-footer.png" id="barra">
-<a href="pagina12.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
+<a href="pagina11.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
+<a href="pagina13.html" ><img alt="" src="imagens/botao-3.png" class="botoes"></a> 
 </div>
 
 
