--- a/src/pagina18.html
+++ b/src/pagina18.html
@@ -21,7 +21,7 @@
         <div id="texto-esquerda">
             <article>
                 <h1>Bloco de Notas</h1>
-                <img src="imagens/pag18/gif4.gif" alt="">
+                <img id="gif"  src="imagens/pag18/gif4.gif" alt="">
             </article>
         </div>
             
