--- a/src/pagina6.html
+++ b/src/pagina6.html
@@ -43,9 +43,9 @@
 </body>
 
 <div class="footer">
-    <a href="pagina20.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
+    <a href="pagina5.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
     <img src="imagens/barra-footer.png" id="barra">
-    <a href="pagina22.html" ><img alt="" src="imagens/botao5.png" id="botao2"></a> 
+    <a href="pagina7a10.html" ><img alt="" src="imagens/botao5.png" id="botao2"></a> 
 </div>
 
 
