--- a/src/pagina14.html
+++ b/src/pagina14.html
@@ -42,8 +42,9 @@
 </body>
 
 <div class="footer">
-<a href="pagina13.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
-<a href="pagina15.html" ><img alt="" src="imagens/botao-3.png" class="botoes"></a> 
+    <a href="pagina13.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
+    <img src="imagens/barra-footer.png" id="barra">
+    <a href="pagina15.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
 </div>
 
 
