--- a/src/pagina12.html
+++ b/src/pagina12.html
@@ -38,9 +38,11 @@
 </body>
 
 <div class="footer">
-<a href="pagina11.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
-<a href="pagina13.html" ><img alt="" src="imagens/botao-3.png" class="botoes"></a> 
+    <a href="pagina11.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
+    <img src="imagens/barra-footer.png" id="barra">
+    <a href="pagina13.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
 </div>
+
 
 
 </html>
