--- a/src/pagina19.html
+++ b/src/pagina19.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="includes/conteudo.js"></script>
 <script type="text/javascript" src="includes/apiwrapper.js"></script>
 <script type="text/javascript" src="includes/scofunctions.js"></script> 
-<title>Bloco de Notas</title>
+<title>Seja Objetivo</title>
 
 </head>
 
