--- a/src/pagina30.html
+++ b/src/pagina30.html
@@ -5,14 +5,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
-<link rel="stylesheet" type="text/css" href="style-pag1-2-28.css">
+<link rel="stylesheet" type="text/css" href="style/style-pag30.css">
 
 
 <script type="text/javascript" src="includes/conteudo.js"></script>
 <script type="text/javascript" src="includes/apiwrapper.js"></script>
 <script type="text/javascript" src="includes/scofunctions.js"></script> 
 
-<title>Gestão de Mídias Sociais</title>
+<title>Fim</title>
 
 </head>
 
@@ -20,15 +20,14 @@
 
     <section id="home">
         
-        <div id="logo">
-            <img src="imagens/logo-fhemig.png" alt="">
-        </div>
 
         <div id="texto-central">
                 <img id="forma" src="imagens/pag1/forma.png" alt="">
                 <article id="titulo">
-                    <h1>Gestão de <br> mídias sociais</h1>
-                    <h2>Módulo 2 | Briefing</h2>
+                   <h2>Chegamos ao final do Módulo 02 - Briefing. <br>
+                    Se desejar veja o conteúdo novamente para ajudá-lo na construção do conhecimento.
+                    Até o próximo módulo!
+                   </h2>
                 </article>
         </div>
 
@@ -37,17 +36,10 @@
 </body>
 
 <div class="footer">
-    <a href="index.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
-    <a href="apresentacao.html" ><img alt="" src="imagens/botao-3.png" class="botoes"></a> 
+    <a href="pagina29.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
+
 	</div>
 
 
 </html>
-
-
-
-
-
-
-
 
