pagina 30 - com um erro no plano de fundo

--- a/src/pagina30.html
+++ b/src/pagina30.html
@@ -5,29 +5,31 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
-<link rel="stylesheet" type="text/css" href="style/style-pag30.css">
+<link rel="stylesheet" type="text/css" href="style-pag1-2-28-30.css">
 
 
 <script type="text/javascript" src="includes/conteudo.js"></script>
 <script type="text/javascript" src="includes/apiwrapper.js"></script>
 <script type="text/javascript" src="includes/scofunctions.js"></script> 
 
-<title>Fim</title>
+<title>Gestão de Mídias Sociais</title>
 
 </head>
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
 
-    <section id="home">
-        
+
+        <section id="home28">
+    
 
         <div id="texto-central">
                 <img id="forma" src="imagens/pag1/forma.png" alt="">
                 <article id="titulo">
-                   <h2>Chegamos ao final do Módulo 02 - Briefing. <br>
-                    Se desejar veja o conteúdo novamente para ajudá-lo na construção do conhecimento.
-                    Até o próximo módulo!
-                   </h2>
+
+                    <p id="p-pag30">Chegamos ao final do Módulo 02 - Briefing! <br>
+                        Se desejar veja o conteúdo novamente <br>para ajudá-lo na construção do conhecimento. <br>
+                        Até o próximo módulo!
+                    </p>
                 </article>
         </div>
 
@@ -37,7 +39,6 @@
 
 <div class="footer">
     <a href="pagina29.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
-
 	</div>
 
 
