--- a/src/pagina28.html
+++ b/src/pagina28.html
@@ -9,7 +9,7 @@
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
 
-<link rel="stylesheet" type="text/css" href="style-pag1-2-28.css">
+<link rel="stylesheet" type="text/css" href="style-pag1-2-28-30.css">
 
 <script type="text/javascript" src="includes/conteudo.js"></script>
 <script type="text/javascript" src="includes/apiwrapper.js"></script>
