--- a/src/pagina30.html
+++ b/src/pagina30.html
@@ -19,9 +19,8 @@
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
 
 
-        <section id="home28">
+        <section id="home">
     
-
         <div id="texto-central">
                 <img id="forma" src="imagens/pag1/forma.png" alt="">
                 <article id="titulo">
@@ -39,6 +38,7 @@
 
 <div class="footer">
     <a href="pagina29.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a>
+    <a href="pagina3.html" ><img alt="" src="imagens/botao-3.png" class="botoes"></a> 
 	</div>
 
 
