pagina 22 a 27 - erro barra de rolagem e falta responsividade

--- a/src/pagina28.html
+++ b/src/pagina28.html
@@ -36,7 +36,7 @@
     
     
         <div class="footer">
-            <a href="index27.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a> <!-- COLOCAR PAGINA PARA VOLTAR -->
+            <a href="pagina26e27.html" ><img alt="" src="imagens/botao6.png" class="botoes"></a> 
             <a href="pagina29.html" ><img alt="" src="imagens/botao-3.png" class="botoes"></a> 
         </div>
 
