--- a/src/pagina21.html
+++ b/src/pagina21.html
@@ -84,6 +84,6 @@
     <div class="footer">
         <a href="pagina20.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
         <img src="imagens/barra-footer.png" id="barra">
-        <a href="pagina22.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
+        <a href="pagina22e23.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
     </div>
 </html>
