--- a/src/pagina6.html
+++ b/src/pagina6.html
@@ -19,7 +19,6 @@
     <section id="home">
         
         <div id="texto-esquerda">
-            <img id="forma" src="imagens/pag6/forma.png" alt="">
             <article>
                 <h1>O que poderá ser feito?</h1>
             <p>João é professor de confeitaria, sem muitos recursos próprios, de família conservadora,
@@ -43,9 +42,8 @@
 </body>
 
 <div class="footer">
-    <a href="pagina5.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
-    <img src="imagens/barra-footer.png" id="barra">
-    <a href="pagina7a10.html" ><img alt="" src="imagens/botao5.png" id="botao2"></a> 
+    <a href="pagina5.html" ><img alt="" src="imagens/botao2.png" id="botao1"></a>
+    <a href="pagina7a10.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
 </div>
 
 
