--- a/src/pagina26e27.html
+++ b/src/pagina26e27.html
@@ -16,11 +16,9 @@
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
    
-   
-    <div id="titulo-acima"><h1>Principais perguntas para um briefing </h1></div>
-
+  
     <section id="home">
-        <div id="container">
+        <div id="esquerda">
        
 
         <div id="clica-1">
@@ -40,6 +38,7 @@
           </div>
     </div>
     <div id="direita">
+      <h1>Principais perguntas para<br> um briefing </h1>
         <img src="imagens/pags22a27/imagem-2627.png" alt="">
     </div>
 
@@ -49,7 +48,6 @@
 </body>
 <div class="footer">
     <a href="pagina24e25.html" ><img alt="" src="imagens/botao4.png" id="botao1"></a>
-    <img src="imagens/barra-footer.png" id="barra">
     <a href="pagina28.html" ><img alt="" src="imagens/botao.png" id="botao2"></a> 
 </div>
 
