--- a/src/pagina7a10.html
+++ b/src/pagina7a10.html
@@ -58,7 +58,7 @@
                     <input class="check" id="ckb3" type="checkbox" name="" id="">
                     <div id="texto">
                         <label for="ckb3"><img src="imagens/pag7a10/formaMais.png" alt=""></label>
-                        <p>Fazer um briefing superficial</p>
+                        <p>Fazer um briefing superficial.</p>
                     </div>
                     
 
