--- a/src/apresentacao.html
+++ b/src/apresentacao.html
@@ -19,7 +19,7 @@
 
         <div id="texto">
             <h1 id="titulo-apresentacao">Apresentação</h1>
-            <p>O briefing é uma das primeiras etapas do processo comercial de uma organização. <br> 
+            <p>O briefing é uma das primeiras etapas do processo comercial de uma organização.
                     É uma fase primordial de direcionamento para alinhar as expectativas do cliente e o entendimento de toda equipe 
                     envolvida na produção de um determinado projeto.
             </p>
