--- a/src/pagina21.html
+++ b/src/pagina21.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="moodle, " />
     <link rel="stylesheet" href="style/pagina21.css">
-    <title>Quem deve elaborar o Briefin</title>
+    <title>Quem deve elaborar o Briefing</title>
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="fc_iniciaSCO();" onUnload="fc_setStatus('completed');unloadPage();">
     <main>
