--- a/src/pagina3.html
+++ b/src/pagina3.html
@@ -2,6 +2,7 @@
 <html lang="pt" class="menu">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
 <link rel="stylesheet" type="text/css" href="style/style-pag3.css">
