--- a/src/pagina11.html
+++ b/src/pagina11.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="moodle, " />
 <link rel="stylesheet" type="text/css" href="style/style-pag11.css">
 
