--- a/src/pagina14.html
+++ b/src/pagina14.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="moodle, " />
 <link rel="stylesheet" type="text/css" href="style/style-pag12a14.css">
 
@@ -34,7 +35,7 @@
         </div>
         
         <div id="texto-direita">
-            <img src="imagens/pag14/pessoas-trabalho.png" alt="">
+            <img id="pag14" src="imagens/pag14/pessoas-trabalho.jpg" alt="">
         </div>
     
 </section>
