--- a/src/pagina18.html
+++ b/src/pagina18.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="style/style-pag15a18.css">
 
 
@@ -33,7 +34,7 @@
                  projetos, e até mesmo listas de tarefas! Já vem com alguns modelos prontos, e aceita diversas integrações.
        
             </p>
-            <img src="imagens/pag18/blocodenotas.png" alt="">
+            <img id="pag18" src="imagens/pag18/blocodenotas.png" alt="">
         </div>
         
     </section>
