--- a/src/pagina17.html
+++ b/src/pagina17.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="x-ua-compatible" content="IE=10">
 <meta name="keywords" content="moodle, " />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="style/style-pag15a18.css">
 
 
@@ -21,7 +22,7 @@
         <div id="texto-esquerda">
             <article>
                 <h1>Ferramenta Evernote</h1>
-                <img src="imagens/pag17/gif3.gif" alt="">
+                <img id="pag17" src="imagens/pag17/gif3.gif" alt="">
             </article>
         </div>
             
