retirada de id desnecessario

--- a/src/pagina15.html
+++ b/src/pagina15.html
@@ -22,7 +22,7 @@
         <div id="texto-esquerda">
             <article>
                 <h1>Como Montar <br>um Briefing?</h1>
-                <img id="pag15" src="imagens/pag15/gif1-briefing.gif" alt="">
+                <img src="imagens/pag15/gif1-briefing.gif" alt="">
             </article>
         </div>
             
