--- a/src/pagina16.html
+++ b/src/pagina16.html
@@ -22,7 +22,7 @@
         <div id="texto-esquerda">
             <article>
                 <h1>Onde Montar <br>um Briefing?</h1>
-                <img id="pag16" src="imagens/pag16/gif2.gif" alt="">
+                <img src="imagens/pag16/gif2.gif" alt="">
             </article>
         </div>
             
