--- a/src/pagina17.html
+++ b/src/pagina17.html
@@ -22,7 +22,7 @@
         <div id="texto-esquerda">
             <article>
                 <h1>Ferramenta Evernote</h1>
-                <img id="pag17" src="imagens/pag17/gif3.gif" alt="">
+                <img src="imagens/pag17/gif3.gif" alt="">
             </article>
         </div>
             
