--- a/mod10/final10/src/pagina2.html
+++ b/mod10/final10/src/pagina2.html
@@ -16,9 +16,8 @@
         <div class="div2">
             <div class="div3"> 
                 <div class="div4">
-                    <h2>Finalizando o Módulo VII!</h2>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/FXHWXOcAvds?si=d5WsEonz0ZX2A1qn?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                  </div>
+                    <h2>Finalizando o Módulo X!</h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/G6g6xStV-R8?si=a4oqdWa3HRKw2m5C?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>                  </div>
             </div>
         </div>
 
