--- a/mod10/resumo10/src/pagina2.html
+++ b/mod10/resumo10/src/pagina2.html
@@ -16,10 +16,8 @@
         <div class="div2">
             <div class="div3"> 
                 <div class="div4">
-                    <h2>Resumo - Módulo VII</h2>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/B5-7HwhtR-k?si=zpF5IizzxYCdNO0Q?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                   </div>
-            </div>
+                    <h2>Resumo - Módulo X</h2>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/eRveSkNWJeo?si=GjJioi_un5KQki_t?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            </div>
         </div>
 
     
