--- a/mod11-2/src/pagina1.html
+++ b/mod11-2/src/pagina1.html
@@ -18,7 +18,7 @@
             <div class="div3"> 
                     <div class="div4">
                         <h1>Gestão de Conteúdo para WEB e Mídias Sociais</h1>
-                        <h2>MÓDULO 11 | Aplicações e Sites</h2>
+                        <h2>MÓDULO 11 | Aplicações e Sites | Finalização</h2>
                         <a href="pagina2.html">COMEÇAR AGORA</a>
                     </div>
             </div>
